// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries create a supplier 1`] = `
Object {
  "data": Object {
    "createSupplier": Object {
      "id": "1",
      "name": "The Supplier",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries create a supplier status 1`] = `
Object {
  "data": Object {
    "createSupplierStatus": Object {
      "dateCreated": "Feb 14",
      "id": "1",
      "status": "yeeeeee",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries create a user 1`] = `
Object {
  "data": Object {
    "createUser": Object {
      "id": "1",
      "name": "User 1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries create an item 1`] = `
Object {
  "data": Object {
    "createItem": Object {
      "currency": "PHP",
      "description": "Corned Beef",
      "id": "1",
      "itemNo": "1",
      "price": 2000,
      "quantity": 5,
      "uom": "kg",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries delete a supplier 1`] = `
Object {
  "data": Object {
    "deleteSupplier": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries delete a supplier status 1`] = `
Object {
  "data": Object {
    "deleteSupplierStatus": null,
  },
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field SupplierStatus.status.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries delete a user 1`] = `
Object {
  "data": Object {
    "deleteUser": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries delete an item 1`] = `
Object {
  "data": Object {
    "deleteItem": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should error when no address 1`] = `
Object {
  "data": Object {
    "address": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should error when no item 1`] = `
Object {
  "data": Object {
    "item": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should error when no supplier 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field Query.supplier.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should error when no user 1`] = `
Object {
  "data": Object {
    "user": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should error when no user 2`] = `
Object {
  "data": Object {
    "supplierStatus": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should fetch all address 1`] = `
Object {
  "data": Object {
    "allAddresss": Array [
      Object {
        "building_name": "building name",
        "city": "city",
        "id": "A1",
        "state": "state",
        "street": "street",
        "zip_code": "zip_code",
      },
      Object {
        "building_name": "building name 2",
        "city": "city 2",
        "id": "A2",
        "state": "state 2",
        "street": "street 2",
        "zip_code": "zip_code 2",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should fetch all items 1`] = `
Object {
  "data": Object {
    "allItems": Array [
      null,
      null,
    ],
  },
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field Item.itemNo.],
    [GraphQLError: Cannot return null for non-nullable field Item.itemNo.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should fetch all supplier status 1`] = `
Object {
  "data": Object {
    "allSupplierStatus": Array [
      null,
      null,
    ],
  },
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field SupplierStatus.status.],
    [GraphQLError: Cannot return null for non-nullable field SupplierStatus.status.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should fetch all suppliers 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field Supplier.address.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should fetch all user 1`] = `
Object {
  "data": Object {
    "allUsers": Array [
      Object {
        "id": "1",
        "name": "User 1",
      },
      Object {
        "id": "2",
        "name": "User 2",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should fetch one address 1`] = `
Object {
  "data": Object {
    "address": Object {
      "building_name": "building name",
      "city": "city",
      "id": "A1",
      "state": "state",
      "street": "street",
      "zip_code": "zip_code",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should fetch one item  1`] = `
Object {
  "data": Object {
    "item": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should fetch one supplier 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field Query.supplier.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should fetch one supplier status 1`] = `
Object {
  "data": Object {
    "supplierStatus": null,
  },
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field SupplierStatus.status.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries should fetch one user 1`] = `
Object {
  "data": Object {
    "user": Object {
      "name": "User 1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries update a supplier 1`] = `
Object {
  "data": Object {
    "updateSupplier": Object {
      "address": Object {
        "building_name": "building name",
        "street": "street",
      },
      "id": "1",
      "name": "Supp name",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries update a supplier status 1`] = `
Object {
  "data": Object {
    "updateSupplierStatus": Object {
      "dateCreated": "February 14, 2020",
      "id": "1",
      "status": "Dispatched",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries update a user 1`] = `
Object {
  "data": Object {
    "updateUser": Object {
      "name": "User 1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries update an item 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [GraphQLError: Variable "$item" got invalid value "5" at "item.quantity"; Expected type Float. Float cannot represent non numeric value: "5"],
    [GraphQLError: Variable "$item" got invalid value "2000" at "item.price"; Expected type Float. Float cannot represent non numeric value: "2000"],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
